2019-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anytime): The useR argument can now be set via an option
	* man/anytime.Rd: Ditto

2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_r_format.R: Deactivate test as it fails on Travis

2019-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Use Rcpp::Function to access R
	functionality instead of using RApiDatetime

	* DESCRIPTION: No longer import RApiDatetime
	* NAMESPACE: Idem

        * inst/tinytest/test_all_formats.R: Loosen Windows test restrictions
	* inst/tinytest/test_gh_issue_96.R: Idem

2019-07-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp: A few minor #nocov additions
	* inst/tinytest/test_all_formats.R: Add test for anydate with useR

2019-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Skip tz argument, change
	internal conversion logic and reflect optional asDate argument

	* inst/tinytest/test_r_format.R: Skip for now
	* inst/tinytest/test_bulk.R (fullPOSIXctEx): Set TZ once

2019-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R: Add a paragraph warning about possibly issue on
	Windows due to Boost ignoring TZ (but using the tzutil program)

	* tests/tinytest.R: Call as utils::packageVersions()
        * inst/tinytest/test_all_formats.R: Idem
        * inst/tinytest/test_bulk.R: Idem
        * inst/tinytest/test_gh_issue_5.R: Idem
        * inst/tinytest/test_utilities.R: Idem
        * inst/tinytest/test_validate.R: Idem

2019-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (ptToDouble): Another debug message

2019-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
