@@ -1,3 +1,10 @@
+2019-07-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* inst/tinytest/test_all_formats.R: Tweaks for Windows tests
+	* inst/tinytest/test_bulk.R: Idem
+
 2019-07-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/anytime.R (anytime): The useR argument can now be set via an option
